[package]
name = "httptest"
version = "0.1.0"
authors = ["Ed Bassett <ed@devsketchpad.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
futures = "0.3.28"
anyhow = "1.0.75"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
hyper-util = { version = "0.1.11", features = ["full"] }
http-body-util = "0.1.3"
